blogging-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bloggingapp-deployment
spec:
  selector:
    matchLabels:
      app: bloggingapp
  replicas: 2
  template:
    metadata:
      labels:
        app: bloggingapp
    spec:
      containers:
        - name: bloggingapp
          image: waldara/bloggingapp:1.0 
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
