blogging-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bloggingapp-svc
spec:
  selector:
    app: bloggingapp
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080 
  type: NodePort
